--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,13 @@
     <title>Dice Roll Static</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    
+    <style>
+      .navbar {
+        display: flex;
+        justify-content: space-around;
+      }
+    </style>
   </head>
   <body>
 
